<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/signin_page_background" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:padding="15dp">

            <ImageView
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:src="@drawable/baseline_arrow_back_ios_24"
                app:tint="#191919" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Back"
                android:id="@+id/back"
                android:textColor="#191919"
                android:textSize="20sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>


    <com.github.captain_miao.optroundcardview.OptRoundCardView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:optRoundCardCornerRadius="50dp"
        app:optRoundCardElevation="0dp"
        app:optRoundCardLeftBottomCorner="false"
        app:optRoundCardLeftTopCorner="true"
        app:optRoundCardRightBottomCorner="false"
        app:optRoundCardRightTopCorner="true"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginTop="80dp">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Create Account"
                    android:textStyle="bold"
                    android:textSize="25dp"
                    android:textColor="#191919"
                    android:layout_marginStart="30dp"
                    android:layout_marginLeft="30dp" />

                <EditText
                    android:id="@+id/fullname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@android:color/transparent"
                    android:hint="Full Name"
                    android:drawableEnd="@drawable/user_icon"
                    android:drawableTint="#696969"
                    android:padding="15dp"
                    android:textColor="#191919"
                    android:textColorHint="#696969"
                    android:textStyle="bold"
                    android:drawableRight="@drawable/user_icon" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:background="#696969" />
                <EditText
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@android:color/transparent"
                    android:hint="E-mail"
                    android:drawableEnd="@drawable/email_icon"
                    android:drawableTint="#696969"
                    android:padding="15dp"
                    android:textColor="#191919"
                    android:textColorHint="#696969"
                    android:textStyle="bold"
                    android:drawableRight="@drawable/email_icon" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:background="#696969" />

                <EditText
                    android:id="@+id/etpassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@android:color/transparent"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:drawableEnd="@drawable/pasword_icon"
                    android:drawableTint="#696969"
                    android:padding="15dp"
                    android:textColor="#191919"
                    android:textColorHint="#696969"
                    android:textStyle="bold"
                    android:drawableRight="@drawable/pasword_icon" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:background="#696969" />

                <EditText
                    android:id="@+id/cPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@android:color/transparent"
                    android:hint="Confirm Password"
                    android:drawableEnd="@drawable/pasword_icon"
                    android:drawableTint="#696969"
                    android:padding="15dp"
                    android:textColor="#191919"
                    android:inputType="text"
                    android:textColorHint="#696969"
                    android:textStyle="bold"
                    android:drawableRight="@drawable/pasword_icon" />

                <EditText
                    android:id="@+id/mobileno"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="30dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="30dp"
                    android:background="@android:color/transparent"
                    android:hint="Moible Number"
                    android:drawableEnd="@drawable/mobile"
                    android:drawableTint="#696969"
                    android:inputType="text"
                    android:padding="15dp"
                    android:textColor="#191919"
                    android:textColorHint="#696969"
                    android:textStyle="bold"
                    android:drawableRight="@drawable/mobile" />

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_marginStart="40dp"
                    android:layout_marginEnd="40dp"
                    android:background="#696969" />

                <Button
                    android:id="@+id/signup"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginStart="50dp"
                    android:layout_marginTop="30dp"
                    android:layout_marginEnd="50dp"
                    android:layout_marginBottom="80dp"
                    android:background="@drawable/button_signin_background"
                    android:text="Sign Up"
                    android:textAllCaps="false"
                    android:textColor="@android:color/white"
                    android:textSize="20sp"
                    android:textStyle="bold" />
            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </com.github.captain_miao.optroundcardview.OptRoundCardView>

</androidx.constraintlayout.widget.ConstraintLayout>